# powerplant-coding-challenge

./: .gitignore  Dockerfile  README.md  call_endpoint.py  pyproject.toml
production_plan/: api.py  models.py  payload_solvers.py
tests/: test_api.py  test_payload_solvers.py
